[tool.poetry]
name = "aioify"
version = "0.3.1"
description = "Make every Python function async/await"
authors = ["Yifei Kong <kongyifei@gmail.com>", "Roman Inflianskas <infroma@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yifeikong/aioify"
keywords = ["asyncio", "async", "await", "aioify", "wrap"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers"
]

[tool.poetry.dependencies]
python = "^3.5"
module-wrapper = "^0.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
